Implement the functionalities front-end of the shopping cart

--- a/html/product.html
+++ b/html/product.html
@@ -21,6 +21,7 @@
 
 <body>
 
+    <a href="cart.html">Cart</a>
     <div class="add">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" onclick="getDataAddNewProduct()">ADD NEW PRODUCT</button>
     </div>
@@ -42,6 +43,7 @@
                 <th>color</th>
                 <th>size</th>
                 <th>sub category</th>
+                <th colspan="2">Action</th>
                 <th>Delete</th>
                 <th>Update</th>
                 <th>Views</th>
