--- a/html/auth.html
+++ b/html/auth.html
@@ -184,7 +184,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="register()">Save</button>
+                <button type="button" class="btn btn-primary" onclick="doRegister()">Save</button>
             </div>
         </div>
     </div>
